Jenkins DSL: Remove JDK 9 and adjust location of image for the project-logo
git-svn-id: https://svn.apache.org/repos/asf/poi/trunk@1842275 13f79535-47bb-0310-9956-ffa450edef68